--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@ iframe {
 .projects > h4 {
   font-size: 1rem;
   cursor: pointer;
-  opacity: 0.5;
+  opacity: 0.6;
 }
 
 .projects > h4:hover {
@@ -92,7 +92,7 @@ iframe {
 
 .projectText, .aboutNav, .projectImages {
   width: 100%;
-  margin-bottom: 2em;
+  margin-bottom: 2em;;
 }
 
 .projectImages {
@@ -168,7 +168,7 @@ iframe {
   }
 
   .projects > h4 {
-    font-size: 0.7rem;
+    font-size: 0.8rem;
     opacity: 0.8;
     margin: 0.5em 0.75em;
   }
