--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+@font-face {
+  font-family: 'Oxygen';
+  src: url('assets/Oxygen-Regular.woff');
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: 'IBM Plex Mono', monospace;
+  font-family: 'Oxygen';
 }
