--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono');
 
+* {
+  line-height: 1.3;
+}
+
 a {
   color: white;
   text-decoration: none;
   font-weight: bold;
+  padding: 0.5em 1.25em;
+  background: #2f2f2f;
+  border-radius: 0.75em;
+  transition: 0.2s;
+  font-size: 0.9rem;
+}
+
+a:hover {
+  color: #222;
+  background: white;
 }
 
 ul {
@@ -15,7 +29,7 @@ li {
   display: inline-block;
   margin: 0;
   margin-right: 2em;
-  margin-bottom: 0.5em;
+  margin-bottom: 2em;
 }
 
 iframe {
@@ -117,7 +131,7 @@ iframe {
 }
 
 .smallProject {
-  margin-bottom: 2.5em;
+  margin-bottom: 4em;
 }
 
 .smallProject > .projectText {
@@ -126,7 +140,7 @@ iframe {
 
 .smallProject > h2 {
   font-size: 1.5rem;
-  color: #FFAB00;
+  font-weight: bolder;
 }
 
 @keyframes party-anim {
@@ -160,7 +174,7 @@ iframe {
 
 @media only screen and (max-width: 840px) {
   iframe {
-    width: 100%;
+    width: 90vw;
     height: 60vw;
   }
 
