--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
 @font-face {
   font-family: 'Oxygen';
+  font-display: swap;
   src: url('assets/Oxygen-Regular.woff');
 }
 
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Oxygen';
+  font-family: 'Oxygen', Helvetica, sans-serif;
 }
