--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,3 @@
-* {
-  line-height: 1.3;
-}
-
-button {
-  color: #222;
-  text-decoration: none;
-  font-weight: bold;
-  padding: 1em 2em;
-  background: #fff;
-  border-radius: 0.4em;
-  transition: 0.2s;
-  font-size: 1rem;
-  border: none;
-  margin-bottom: 1.5em;
-  cursor: pointer;
-}
-
-button:hover {
-  color: #fff;
-  background: #222;
-}
-
 video {
   width: 320px;
 }
@@ -32,7 +9,6 @@ video {
   color: white;
   transition: all 0.2s;
   display: flex;
-  flex-direction: row;
   justify-content: flex-start;
 }
 
@@ -43,10 +19,8 @@ video {
 }
 
 .projectList {
-  text-align: left;
   transition: all 0.2s;
   background: #222;
-  position: relative;
   padding: 1.25em;
   width: 10vw;
 }
@@ -58,16 +32,10 @@ video {
   font-size: 0.9rem;
   margin: 0;
   margin-bottom: 1.5em;
-  clear: both;
-  float: left;
   font-weight: bold;
 }
 
-.projectListTitle:hover {
-  color: #fff;  
-}
-
-.projectListTitleActive, .projectListTitleActive:hover {
+.projectListTitleActive, .projectListTitleActive:hover, .projectListTitle:hover {
   color: #fff;
 }
 
@@ -129,8 +97,6 @@ video {
   height: auto;
   cursor: pointer;
 
-  opacity: 0;
-  animation: fadein 0.3s linear 0s 1 forwards;
   border-radius: 6px;
   border: 2px solid rgba(255, 255, 255, 0);
   transition: 0.2s;
@@ -179,25 +145,10 @@ video {
   100% {background-color: hsl(360, 80%, 50%);}
 }
 
-@keyframes fadein {
-  from {
-    opacity: 0;
-  }
-
-  to  {
-    opacity: 1;
-  }
-}
-
 @media only screen and (max-width: 840px) {
   iframe {
     width: 90vw;
     height: 60vw;
-  }
-
-  button {
-    width: 100%;
-    padding: 1em 0;
   }
   
   .app {
