--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,17 @@
   src: url('assets/Oxygen-Regular.woff');
 }
 
+* {
+  line-height: 1.3;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: 'Oxygen', Helvetica, sans-serif;
+}
+
+ul {
+  margin: 0;
+  list-style: none;
 }
